<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_event"
            android:icon="@drawable/ic_add_circle"
            android:title="@string/nav_add_event" />
        <item
            android:id="@+id/nav_query_events"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_query_events" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar_month"
            android:title="@string/nav_calendar" />
        <!-- El Mapa de calor NO va en el drawer (REQ-NAV-001 exige 7 items): se accede desde la
             toolbar de Inicio y Calendario (menu_heatmap). -->
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_cloud_upload"
            android:title="@string/nav_backup" />
        <item
            android:id="@+id/nav_restore"
            android:icon="@drawable/ic_cloud_download"
            android:title="@string/nav_restore" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_exit" />
    </group>
</menu>
