<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.eddndev.purpura.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/addEventFragment"
        android:name="com.eddndev.purpura.ui.addevent.AddEventFragment"
        android:label="@string/title_add_event"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/queryFragment"
        android:name="com.eddndev.purpura.ui.query.QueryFragment"
        android:label="@string/title_query"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.eddndev.purpura.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/heatmapFragment"
        android:name="com.eddndev.purpura.ui.heatmap.HeatmapFragment"
        android:label="@string/title_heatmap"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/backupFragment"
        android:name="com.eddndev.purpura.ui.backup.BackupFragment"
        android:label="@string/title_backup"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/restoreFragment"
        android:name="com.eddndev.purpura.ui.backup.RestoreFragment"
        android:label="@string/title_restore"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.eddndev.purpura.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/eventDetailFragment"
        android:name="com.eddndev.purpura.ui.detail.EventDetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/authFragment"
        android:name="com.eddndev.purpura.ui.auth.AuthFragment"
        android:label="@string/title_auth"
        tools:layout="@layout/fragment_auth" />
</navigation>
